# CA-Studio

./: .gitignore  CA_Studio_Report.docx  MSc Project Report Template.docx  README.md  app.py  fix_database.py  generate_figures.py  img_result.json  pyproject.toml  report.md  requirements.txt  start.py  test_api.py  test_consolidated_app.py  test_debug.py  test_debug2.py  test_debug3.py  test_debug4.py  test_debug5.py  test_final.py  test_interactions.py  test_modal.py  test_modal_simple.py  test_pages.py  test_pages_loaded.py
ca_engine/: __init__.py
cli/: __init__.py  main.py
configs/: -R624.yaml  0AISB.yaml  1007437.yaml  1builder183-AISB.yaml  413.yaml  C6.yaml  Conway.yaml  D6.yaml  DormancyA.yaml  DormancyB.yaml  DormancyC.yaml  R4-.yaml  R413v.yaml  R413v2.yaml  R4N1.yaml  TGA.yaml  TestRule.yaml  TextMatrix.yaml  _template.yaml  chibegam.yaml  compexsimmetry.yaml  corestructurebuilder.yaml  delaydeinkfractal.yaml  dia6.yaml  diffrentexplosion.yaml  diffrnetbuilder.yaml  dsymefractal.yaml  emergecebutdsentstay.yaml  expan_becomes_dynamic.yaml  expan_dynam.yaml  expansi_dynamic_starngetoo.yaml  expansion.yaml  goodamazing.yaml  strip6.yaml
docs/: README.md  WHITEPAPER_DRAFT.md  WORKFLOW_OBSERVATIONS.md  research-advanced-features.md
documents/: README.md
report/: index.md
rules/: -R624.yaml  0AISB.yaml  1007437.yaml  1builder183-AISB.yaml  413.yaml  Conway.yaml  DormancyA.yaml  DormancyB.yaml  DormancyC.yaml  R4-.yaml  R413v.yaml  R413v2.yaml  R4N1.yaml  TGA.yaml  TestRule.yaml  chibegam.yaml  compexsimmetry.yaml  corestructurebuilder.yaml  delaydeinkfractal.yaml  diffrentexplosion.yaml  diffrnetbuilder.yaml  dsymefractal.yaml  emergecebutdsentstay.yaml  expan_becomes_dynamic.yaml  expan_dynam.yaml  expansi_dynamic_starngetoo.yaml  expansion.yaml  goodamazing.yaml
scripts/: cleanup_db.py  convert_rules_to_yaml.py  generate_configs.py  test_pygame_screenshot.py
tests/: __init__.py  conftest.py  test_api_custom.py  test_grid.py  test_metric_dsl.py  test_metrics.py  test_parity.py  test_rules.py  (+3 more)
(+134 files in other folders)
